<resources>
    <string name="app_name">ROM Control</string>
    <string name="user_interface">Interface</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="menu_main_activity_change_locale">Blank!</string>
    <string name="header_statusbar">Statusbar</string>
    <string name="header_navbar">Navigation Bar</string>
    <string name="toggles_layout">Toggles</string>
    <string name="general_ui">General UI</string>
    <string name="clock">Clock</string>
    <string name="battery">Battery</string>
    <string name="signal">Signal</string>
    <string name="nav_bar">Navigation Bar</string>
    <string name="power_menu">Power Menu</string>
    <string name="led_options">LED</string>
    <string name="spen_options">S Pen Gestures</string>
    <string name="header_system">System</string>
    <string name="sound">Sound</string>
    <string name="lockscreen_options">Lockscreen</string>
    <string name="title_ribbon">Ribbons</string>
    <string name="weather">Weather</string>
    <string name="tools">Tools</string>
    <string name="installer">Installer</string>
    <string name="recents_header">Recents</string>
    <string name="title_about">About AOKPZMod</string>
    <string name="title_ui">General User Interface</string>
    <string name="title_statusbar_clock">Statusbar Clock</string>
    <string name="title_statusbar_toggles">Statusbar Toggles</string>
    <string name="title_statusbar_battery">Statusbar Battery</string>
    <string name="title_statusbar_signal">Statusbar Signal</string>
    <string name="title_navbar">Navigation Bar</string>
    <string name="title_navring">Navigation Ring</string>
    <string name="title_power_menu">Power Menu</string>
    <string name="title_led">LED Control</string>
    <string name="title_spen">S Pen Gestures</string>
    <string name="title_lockscreens">Lockscreen Options</string>
    <string name="title_lockscreens_targets">Lockscreen Targets</string>
    <string name="title_sound">Sound Settings</string>
    <string name="title_weather">Weather Settings</string>
    <string name="title_performance">Performance Settings</string>
    <string name="title_installer">Installer Settings</string>
    <string name="title_clipboard_share">Share to Clipboard</string>
    <string name="mgerrit_activity_name">mGerrit</string>
    <string name="ribbon_settings_title">Ribbons</string>
	<string name="title_settings_lockclock">LockClock Settings</string>
    <string name="header_summary_clock">@null</string>
    <string name="header_summary_toggles">@null</string>
    <string name="header_summary_general_ui">@null</string>
    <string name="header_summary_battery">@null</string>
    <string name="header_summary_signal">@null</string>
    <string name="header_summary_navigation_bar">@null</string>
    <string name="header_summary_power_menu">@null</string>
    <string name="header_summary_led">@null</string>
    <string name="header_summary_spen">@null</string>
    <string name="header_summary_sound">@null</string>
    <string name="header_summary_performance">@null</string>
    <string name="header_summary_lockscreens">@null</string>
    <string name="header_summary_weather">@null</string>
    <string name="header_summary_vibrations">@null</string>
    <string name="ribbon_settings_summary">@null</string>
    <string name="header_summary_installer">@null</string>
    <string name="menu_nav_bar_reset">Reset nav bar</string>
    <string name="menu_ribbon_reset">Reset ribbon</string>
    <string name="menu_ribbon_apps">Reset apps</string>
    <string name="menu_ribbon_rearrange">Rearrange ribbon</string>
    <string name="menu_ribbon_hide">Hide apps</string>
    <string name="menu_ribbon_toggles">Setup toggles</string>
    <string name="menu_ribbon_na">Not available</string>
    <string name="menu_ribbon_toggles_error">Toggles are only available for the left and right swipe ribbons.</string>
    <string name="menu_lockscreens_reset">Reset lockscreen wallpaper</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="misc_short">Misc</string>
	<string name="misc_colors">Colors</string>
	<string name="misc_statusbar">Statusbar</string>
    <string name="custom_app_icon_successfully">"'s icon set successfully!"</string>
    <string name="text_on">On</string>
    <string name="text_off">Off</string>
    <string name="title_show_power_saver">Power Saver</string>
    <string name="title_show_screenshot">Screenshot</string>
    <string name="title_show_torch_toggle">Torch</string>
    <string name="title_show_airplane_toggle">Airplane mode</string>
    <string name="title_show_navbar_hide">System Bar toggles</string>
    <string name="summary_show_navbar_hide">Enabling this will show toggles that hide the NavBar and Statusbar</string>
    <string name="title_show_volume_state_toggle">Volume states</string>
    <string name="title_show_reboot_keyguard">Reboot on lockscreen</string>
    <string name="summary_show_reboot_keyguard">Enabling this will show reboot options while on lockscreen</string>
    <string name="spen_left_title">Action on swipe left</string>
    <string name="spen_right_title">Action on swipe right</string>
    <string name="spen_up_title">Action on swipe up</string>
    <string name="spen_down_title">Action on swipe down</string>
    <string name="spen_double_title">Action on double tap</string>
    <string name="spen_long_title">Action on longpress</string>
    <string name="spen_enable">Enable S Pen Gestures</string>
    <string name="spen_enable_summary">Set custom actions for S Pen gestures</string>
    <string name="spen_extras_cat">S Pen extras</string>
    <string name="spen_gestures_cat">S Pen Gestures</string>
    <string name="enable_stylus_pointer_title">Enable S Pen pointer</string>
    <string name="enable_stylus_pointer_summary">Enable the mouse icon when using the S Pen</string>
    <string name="persist_options">Persistence</string>
    <string name="persist_enable">Enable Persistence</string>
    <string name="persist_enable_summary">Enable data to persist across installs</string>
    <string name="persist_prop_density">Persist Density</string>
    <string name="persist_prop_density_summary">Persist LCD density</string>
    <string name="persist_file_hosts">Persist Hosts</string>
    <string name="bootani_cat">Boot animation</string>
    <string name="navbar_cat">NavBar</string>
    <string name="notification_cat">Notification</string>
    <string name="display_cat">Display</string>
    <string name="recents_cat">Recents</string>
    <string name="status_bar_notif_count_title">Show notification count</string>
    <string name="status_bar_notif_count_summary">Display number of pending notifications in the Statusbar</string>
    <string name="vibrate_notif_expand_title">Vibrate on expand</string>
    <string name="vibrate_notif_expand_summary">Vibrate when expanding notifications (requires UI restart)</string>
    <string name="disable_bootanimation_title">Disable boot animation</string>
    <string name="custom_bootanimation_title">Custom boot animation</string>
    <string name="custom_bootanimation_summary">Select a custom zip from storage to use as your new boot animation
    </string>
    <string name="notification_wallpaper_title">Notification background</string>
    <string name="notif_wallpaper_alpha_title">Notification background alpha</string>
    <string name="custom_carrier_label_title">Custom carrier label</string>
    <string name="ime_switcher_title">Show IME Switcher</string>
    <string name="ime_switcher_summary">In Statusbar while typing</string>
    <string name="wakeup_when_plugged_unplugged_title">Wake up on charger</string>
    <string name="wakeup_when_plugged_unplugged_summary">Wake up device if a charger is plugged in or unplugged</string>
    <string name="system_power_crt_screen_off_title">CRT screen off</string>
    <string name="system_power_crt_screen_off_summary">Screen will animate an Electron Beam when turned off</string>
    <string name="system_power_crt_mode_title">CRT animation mode</string>
    <string name="system_power_crt_mode_dialog_title">Show CRT animation</string>
    <string name="rotate_180_title">Allow 180-degree rotation</string>
    <string name="rotate_180_summary">Checking this allows your device to rotate upside down</string>
    <string name="rotate_270_title">Allow 270-degree rotation</string>
    <string name="rotate_270_summary">Checking this allows your device to rotate to the right</string>
    <string name="recent_kill_all">Enable Kill-All button</string>
    <string name="recent_kill_all_summary">Enable kill-all button in Recent Apps window and select position</string>
    <string name="ram_bar">Recents RAM bar</string>
    <string name="ram_bar_summary">Shows RAM usage in the Recent Apps window</string>
    <string name="longpress_to_kill">Hardware Back-to-kill</string>
    <string name="longpress_to_kill_summary">Holding the hardware Back button will kill the activity in the foreground
    </string>
    <string name="hide_extras">Hide Extras</string>
    <string name="hide_extras_summary">Hide some SystemBar items e.g. the Compatibility Mode button</string>
    <string name="multipane_ui">Enable Dual Panel</string>
    <string name="multipane_ui_summary">Checking this will enable the Dual Panel (Tablet) UI used by certain apps
    </string>
    <string name="show_overflow_title">Show Menu UI overflow</string>
    <string name="show_overflow_summary">Display the 3-dot overflow menu button within apps</string>
    <string name="notification_show_wifi_ssid_title">Show WiFi network name</string>
    <string name="notification_show_wifi_ssid_summary">Display the name of the currently connected Wifi network</string>
    <string name="brightness_slider_title">Statusbar brightness slider</string>
    <string name="brightness_slider_summary">When enabled, this option will allow you to change the brightness by
        sliding your finger across the Statusbar. Note: Will not be active when auto-brightness is on
    </string>
    <string name="user_mode_ui">UI Mode</string>
    <string name="user_mode_ui_summary">Choose the style of the NavBar and Statusbar</string>
    <string name="transparency_dialog_title">Transparency settings</string>
    <string name="statusbar_behaviour">Statusbar Behaviour</string>
    <string name="statusbar_hide_summary">Choose from 3 different statusbar behaviour</string>
    <string name="hidden_statusbar_pulldown_timeout_title">Hidden statusbar pulldown timeout</string>
    <string name="hidden_statusbar_pulldown_timeout_summary">Timeout for hidden statusbar window</string>
    <string name="status_bar_icon_color_enable_title">Enable Statusbar color</string>
    <string name="status_bar_icon_color_enable_summary">Enabling color filter for Statusbar icon </string>
    <string name="status_bar_icon_color_title">Choose icon color</string>
    <string name="statusbar_fontsize">Statusbar Font Size</string>
    <string name="statusbar_fontsize_summary">Change the size of text elements on statusbar\nWill restart UI!</string>
    <string name="status_bar_icon_opacity">Notification icon opacity</string>
    <string name="status_bar_icon_opacity_summary">Sets opacity of status bar notification icons</string>
    <string name="missed_call_breath">Breathing Missed Call</string>
    <string name="missed_call_breath_summary">Will give your missed call notifications a breathing effect on the statusbar.</string>
    <string name="notification_shade_dim_title">Dim notification shade</string>
    <string name="notification_shade_dim_summary">Toggle the dimming effect when pulling down the notification shade</string>
    <string name="notification_settings_btn_title">Always show settings button</string>
    <string name="notification_qsettings_btn_title">Always hide quick settings button</string>
</resources>