<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="transparency_dialog"
        android:title="@string/transparency_dialog_title" />


    <PreferenceCategory
        android:key="bootani"
        android:title="@string/bootani_cat">

        <Preference
            android:key="custom_bootanimation"
            android:title="@string/custom_bootanimation_title"
            android:summary="@string/custom_bootanimation_summary" />

        <CheckBoxPreference
            android:key="disable_bootanimation"
            android:title="@string/disable_bootanimation_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="notification"
        android:title="@string/notification_cat">

        <Preference
            android:key="custom_carrier_label"
            android:title="@string/custom_carrier_label_title" />

        <CheckBoxPreference
            android:key="notification_show_wifi_ssid"
            android:title="@string/notification_show_wifi_ssid_title"
            android:summary="@string/notification_show_wifi_ssid_summary"
            android:defaultValue="false" />

        <Preference
            android:key="notification_wallpaper"
            android:title="@string/notification_wallpaper_title"
            android:summary="@string/notification_wallpaper_summary" />

        <Preference
            android:key="notification_wallpaper_alpha"
            android:title="@string/notif_wallpaper_alpha_title" />

        <CheckBoxPreference
            android:key="vibrate_notif_expand"
            android:title="@string/vibrate_notif_expand_title"
            android:summary="@string/vibrate_notif_expand_summary" />

        <CheckBoxPreference
            android:key="notification_shade_dim"
            android:title="@string/notification_shade_dim_title"
            android:summary="@string/notification_shade_dim_summary" />

		<CheckBoxPreference
            android:key="notification_settings_btn"
            android:title="@string/notification_settings_btn_title"
            android:defaultValue="false" />

		<CheckBoxPreference
            android:key="notification_qsettings_btn"
            android:title="@string/notification_qsettings_btn_title"
            android:defaultValue="false" /> 

    </PreferenceCategory>
	
	<PreferenceCategory
        android:title="@string/misc_statusbar">

		<ListPreference
            android:key="status_bar_icon_opacity"
            android:dialogTitle="@string/status_bar_icon_opacity"
            android:title="@string/status_bar_icon_opacity"
            android:summary="@string/status_bar_icon_opacity_summary"
            android:entries="@array/status_bar_icon_opacity_entries"
            android:entryValues="@array/status_bar_icon_opacity_values"
            android:defaultValue="140" />
			
		<CheckBoxPreference
            android:key="status_bar_notif_count"
            android:title="@string/status_bar_notif_count_title"
            android:summary="@string/status_bar_notif_count_summary"
            android:defaultValue="false" />	
			
		<CheckBoxPreference
            android:key="ime_switcher"
            android:title="@string/ime_switcher_title"
            android:summary="@string/ime_switcher_summary"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="missed_call_breath"
            android:title="@string/missed_call_breath"
            android:summary="@string/missed_call_breath_summary"
            android:defaultValue="false" /> 
			
			
		<CheckBoxPreference
            android:key="statusbar_brightness_slider"
            android:title="@string/brightness_slider_title"
            android:summary="@string/brightness_slider_summary" />

        <ListPreference
            android:key="hide_statusbar"
            android:entries="@array/hidden_statusbar_entries"
            android:entryValues="@array/hidden_statusbar_values"
            android:title="@string/statusbar_behaviour"
            android:summary="@string/statusbar_hide_summary" />

        <ListPreference
            android:key="hidden_statusbar_pulldown_timeout"
            android:entries="@array/hidden_statusbar_pulldown_timeout_entries"
            android:entryValues="@array/hidden_statusbar_pulldown_timeout_values"
            android:title="@string/hidden_statusbar_pulldown_timeout_title"
            android:summary="@string/hidden_statusbar_pulldown_timeout_summary" />	

		<ListPreference
            android:key="status_bar_fontsize"
            android:title="@string/statusbar_fontsize"
            android:summary="@string/statusbar_fontsize_summary"
            android:entries="@array/statusbar_fontsize_entries"
            android:entryValues="@array/statusbar_fontsize_values" />

		<CheckBoxPreference
            android:key="status_bar_icon_color_enable"
            android:title="@string/status_bar_icon_color_enable_title"
            android:summary="@string/status_bar_icon_color_enable_summary" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="status_bar_icon_color"
            android:title="@string/status_bar_icon_color_title"
            android:defaultValue="#33B5E5"
			android:dependency="status_bar_icon_color_enable"
			alphaSlider="true"/>
		
    </PreferenceCategory>

    <PreferenceCategory
        android:key="navbar"
        android:title="@string/navbar_cat">

        <ListPreference
            android:key="user_mode_ui"
            android:title="@string/user_mode_ui"
            android:summary="@string/user_mode_ui_summary"
            android:entries="@array/user_mode_ui_entries"
            android:entryValues="@array/user_mode_ui_values" />

        <CheckBoxPreference
            android:key="hide_extras"
            android:title="@string/hide_extras"
            android:summary="@string/hide_extras_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="force_dualpanel"
            android:title="@string/multipane_ui"
            android:summary="@string/multipane_ui_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="display"
        android:title="@string/display_cat">

         
        <CheckBoxPreference
            android:key="show_overflow"
            android:title="@string/show_overflow_title"
            android:summary="@string/show_overflow_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="rotate_180"
            android:title="@string/rotate_180_title"
            android:summary="@string/rotate_180_summary" />

        <CheckBoxPreference
            android:key="rotate_270"
            android:title="@string/rotate_270_title"
            android:summary="@string/rotate_270_summary"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="wakeup_when_plugged_unplugged"
            android:title="@string/wakeup_when_plugged_unplugged_title"
            android:summary="@string/wakeup_when_plugged_unplugged_summary"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="system_power_crt_screen_off"
            android:summary="@string/system_power_crt_screen_off_summary"
            android:title="@string/system_power_crt_screen_off_title" />

        <ListPreference
            android:key="system_power_crt_mode"
            android:dialogTitle="@string/system_power_crt_mode_dialog_title"
            android:title="@string/system_power_crt_mode_title"
            android:entries="@array/entries_system_power_crt_mode"
            android:entryValues="@array/values_system_power_crt_mode"
            android:dependency="system_power_crt_screen_off" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="recents"
        android:title="@string/recents_cat">

        <CheckBoxPreference
            android:key="recent_kill_all"
            android:title="@string/recent_kill_all"
            android:summary="@string/recent_kill_all_summary" />

        <CheckBoxPreference
            android:key="ram_usage_bar"
            android:title="@string/ram_bar"
            android:summary="@string/ram_bar_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="misc"
        android:title="@string/misc_short">

        <CheckBoxPreference
            android:key="longpress_to_kill"
            android:title="@string/longpress_to_kill"
            android:summary="@string/longpress_to_kill_summary" />

    </PreferenceCategory>
</PreferenceScreen>
